# tella

./: .gitignore  .vercelignore  CLAUDE.md  DEMO.md  PITCH.md  README.md
.github/workflows/: ci.yml
agent/: .env.example  content_agent.idl  ecosystem.config.cjs  package-lock.json  package.json  tella.idl  tsconfig.json
agent/prompts/: persona.md
agent/scripts/: test-publish-payload.mjs
agent/src/: claude.ts  encryption.ts  index.ts  ipfs.ts  listener.ts  load-env.ts  sails-payload.ts  vara.ts
contracts/content-agent/: Cargo.toml  README.md  build.rs
contracts/content-agent/.github/workflows/: ci.yml
contracts/content-agent/app/: Cargo.toml
contracts/content-agent/app/src/: lib.rs
contracts/content-agent/client/: Cargo.toml  build.rs
contracts/content-agent/client/src/: lib.rs
contracts/content-agent/src/: lib.rs
contracts/tella/: Cargo.toml  README.md  build.rs
contracts/tella/.github/workflows/: ci.yml
contracts/tella/app/: Cargo.toml
contracts/tella/client/: Cargo.toml  build.rs
contracts/tella/client/src/: lib.rs
contracts/tella/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api/ipfs-proxy/: route.ts
frontend/app/api/sails-query/: route.ts
frontend/app/browse/: page.tsx
frontend/app/creator/: page.tsx
frontend/app/my-passes/: page.tsx
frontend/app/post/[id]/: page.tsx
frontend/components/: ArticleBody.tsx  ContentCard.tsx  ContentViewer.tsx  DigestCountdown.tsx  Nav.tsx  PassMintButton.tsx  ThemeToggle.tsx  WalletConnect.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  EmptyState.tsx
frontend/lib/: amount.ts  contract.ts  encryption-browser.ts  encryption.ts  gear-api.ts  markdown.ts  scale.ts  wallet.ts
scripts/: demo-pdf.css  deploy.sh  fix-idl-for-wallet.sh  generate-demo-pdf.sh  setup-agent.sh
