[package]
name = "content-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package allowing to build WASM binary for the program and IDL file for it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
content-agent-app.workspace = true
sails-rs.workspace = true


[build-dependencies]
content-agent-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }

[workspace]
resolver = "3"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/gear-tech/content-agent"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "1.0.0"
tokio = "1.50.0"
content-agent-app = { version = "0.1.0", path = "app" }
content-agent-client = { version = "0.1.0", path = "client" }
