[package]
name = "tella"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Tella — WASM program and IDL for gated content on Vara Network"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tella-app.workspace = true
sails-rs.workspace = true

[build-dependencies]
tella-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }

[workspace]
resolver = "3"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
authors = ["Tella"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/tella-ai/tella"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "1.0.0"
tokio = "1.50.0"
tella-app = { version = "0.1.0", path = "app" }
tella-client = { version = "0.1.0", path = "client" }
