[package]
name = "tella-app"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Tella program business logic"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true

[dev-dependencies]
sails-rs = { workspace = true, features = ["std"] }
